backed-tech-stack-upgradtion and code optimization